# Graduate_work

./: .env.example  Dockerfile  README.md  docker-compose-server.yml  docker-compose.yml  docker.env  nginx.conf  pyproject.toml
.github/workflows/: action.yml
bot/: admin.py  models.py  serializers.py  urls.py  views.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py  0002_alter_tguser_options_alter_tguser_chat_id_and_more.py
bot/tg/: client.py  schemas.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_alter_user_options.py
goals/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_alter_goalcategory_created_and_more.py  0003_goal.py  0004_goalcomment.py  0005_board_goalcategory_board_boardparticipant.py  0006_create_new_objects.py  0007_alter_goalcategory_board.py  0008_alter_board_options.py
tests/: fixtures.py  main_page_test.py  schema_redoc_page_test.py  schema_swagger_ui_page_test.py  token_obtain_pair_test.py
tests/core/: profile_retrieve_test.py
tests/goals/board/: board_create_test.py  board_delete_test.py  board_retrieve_test.py
tests/goals/category/: category_create_test.py  category_delete_test.py  category_put_test.py  category_retrieve_test.py
tests/goals/comment/: comment_create_test.py  comment_delete_test.py  comment_put_test.py  comment_retrieve_test.py
tests/goals/goal/: goal_create_test.py  goal_delete_test.py  goal_patch_test.py  (+1 more)
todolist/: settings.py  urls.py
