[tool.poetry]
name = "graduate-work"
version = "0.1.0"
description = ""
authors = ["Andrew Zaiko <andrewzaiko@gmail.com>"]
readme = "README.md"
packages = [{include = "graduate_work"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
django-environ = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
